manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/target-type":"ip"},"name":"ingress-2048","namespace":"game-2048"},"spec":{"ingressClassName":"alb","rules":[{"http":{"paths":[{"backend":{"service":{"name":"service-2048","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2026-07-24T14:27:09Z"
  finalizers:
  - ingress.k8s.aws/resources
  generation: 1
  name: ingress-2048
  namespace: game-2048
  resourceVersion: "110444"
  uid: 7888924e-a172-4abc-9a7f-7b06ab6edf6d
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: service-2048
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: k8s-game2048-ingress2-bcac0b5b37-2104426396.us-east-1.elb.amazonaws.com
      ports:
      - port: 80
        protocol: ""
