manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"service-2048","namespace":"game-2048"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app.kubernetes.io/name":"app-2048"},"type":"NodePort"}}
  creationTimestamp: "2026-07-24T14:27:08Z"
  name: service-2048
  namespace: game-2048
  resourceVersion: "64012"
  uid: b2a15351-c7cd-4261-8a59-e2bdf1778b03
spec:
  clusterIP: 10.100.33.200
  clusterIPs:
  - 10.100.33.200
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 31620
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: app-2048
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
